<resources>
    <string name="app_name">Pam_Drawer_app</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Olivier Czajkowski</string>
    <string name="nav_header_subtitle">https://github.com/Colacichy/PAM_2024-25</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="zad1">Zadanie 1</string>
    <string name="zad2">Zadanie 2</string>
    <string name="zad3">Zadanie 3</string>
    <string name="zad4">Zadanie 4</string>
    <string name="zad5">Zadanie 5</string>
    <string name="zad6">Zadanie 6</string>
    <string name="zad7">Zadanie 7</string>
    <string name="zad8">Zadanie 8</string>
    <string name="zad9">Zadanie 9</string>
    <string name="zad10">Zadanie 10</string>
    <string name="zad11">Zadanie 11</string>
    <string name="zad12">Zadanie 12</string>
    <string name="zad13">Zadanie 13</string>
    <string name="zad14">Zadanie 14</string>
    <string name="zad15">Zadanie 15</string>
    <string name="zad16">Zadanie 16</string>
    <string name="zad17">Zadanie 17</string>
    <string name="zad18">Zadanie 18</string>
    <string name="zad19">Zadanie 19</string>
    <string name="zad20">Zadanie 20</string>


</resources>